helm/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: weather-service-deployment
  labels:
    app: weather-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-service
  template:
    metadata:
      labels:
        app: weather-service
    spec:
      containers:
        - name: weather-service
          image: ribenjyeo/weather-service:1.0
          ports:
            - containerPort: 8081
