helm/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: weather-service-svc
  labels:
    app: weather-service
spec:
  ports:
    - name: http-8081
      port: 8081
      protocol: TCP
  selector:
    app: weather-service
